API part bootcamp

--- a/test-output/old/Default Suite/classes.html
+++ b/test-output/old/Default Suite/classes.html
@@ -4,30 +4,26 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>chapterNine.NOK_LogInTest</td>
+<td>API.GetExample</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>NOK_LogInWrongEmailAddress</td>
+<td>checkValueInResponse</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>NOK_LogInEmptyFields</td>
+<td>getCurrentF1Results</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>NOK_LogInEmptyPassword</td>
+<td>testUrlParam</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>NOK_LogInWrongPassword</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>NOK_LogInEmptyEmailAddress</td>
+<td>testUrlParam2</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -36,16 +32,8 @@
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>setUp</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>tearDown</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
