--- a/test-output/old/Default Suite/methods-not-run.html
+++ b/test-output/old/Default Suite/methods-not-run.html
@@ -1,2 +1,5 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>API.GetExample.checkValueInResponse</td></tr>
+<tr><td>API.GetExample.testUrlParam</td></tr>
+<tr><td>API.GetExample.getCurrentF1Results</td></tr>
 </table>
