--- a/test-output/index.html
+++ b/test-output/index.html
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,27 +102,7 @@
                     <div class="method-list-content passed suite-Default_Suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_Suite" title="chapterNine.NOK_LogInTest" hash-for-method="NOK_LogInEmptyEmailAddress">NOK_LogInEmptyEmailAddress</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_Suite" title="chapterNine.NOK_LogInTest" hash-for-method="NOK_LogInEmptyFields">NOK_LogInEmptyFields</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_Suite" title="chapterNine.NOK_LogInTest" hash-for-method="NOK_LogInEmptyPassword">NOK_LogInEmptyPassword</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_Suite" title="chapterNine.NOK_LogInTest" hash-for-method="NOK_LogInWrongEmailAddress">NOK_LogInWrongEmailAddress</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_Suite" title="chapterNine.NOK_LogInTest" hash-for-method="NOK_LogInWrongPassword">NOK_LogInWrongPassword</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_Suite" title="API.GetExample" hash-for-method="testUrlParam2">testUrlParam2</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_Suite -->
@@ -140,42 +120,14 @@
           <div class="suite-Default_Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">chapterNine.NOK_LogInTest</span>
+              <span class="class-name">API.GetExample</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="NOK_LogInEmptyEmailAddress">
-                  </a> <!-- NOK_LogInEmptyEmailAddress -->
-                  <span class="method-name">NOK_LogInEmptyEmailAddress</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="NOK_LogInEmptyFields">
-                  </a> <!-- NOK_LogInEmptyFields -->
-                  <span class="method-name">NOK_LogInEmptyFields</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="NOK_LogInEmptyPassword">
-                  </a> <!-- NOK_LogInEmptyPassword -->
-                  <span class="method-name">NOK_LogInEmptyPassword</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="NOK_LogInWrongEmailAddress">
-                  </a> <!-- NOK_LogInWrongEmailAddress -->
-                  <span class="method-name">NOK_LogInWrongEmailAddress</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="NOK_LogInWrongPassword">
-                  </a> <!-- NOK_LogInWrongPassword -->
-                  <span class="method-name">NOK_LogInWrongPassword</span>
+                  <a name="testUrlParam2">
+                  </a> <!-- testUrlParam2 -->
+                  <span class="method-name">testUrlParam2</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -192,7 +144,11 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default Suite&quot;&gt;
   &lt;test name=&quot;bootcamp_maven&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;chapterNine.NOK_LogInTest&quot;/&gt;
+      &lt;class name=&quot;API.GetExample&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;testUrlParam2&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- API.GetExample --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- bootcamp_maven --&gt;
 &lt;/suite&gt; &lt;!-- Default Suite --&gt;
@@ -232,32 +188,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'NOK_LogInWrongEmailAddress')
-data.setCell(0, 2, 'chapterNine.NOK_LogInTest')
-data.setCell(0, 3, 2224);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'NOK_LogInEmptyEmailAddress')
-data.setCell(1, 2, 'chapterNine.NOK_LogInTest')
-data.setCell(1, 3, 1612);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'NOK_LogInWrongPassword')
-data.setCell(2, 2, 'chapterNine.NOK_LogInTest')
-data.setCell(2, 3, 1511);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'NOK_LogInEmptyPassword')
-data.setCell(3, 2, 'chapterNine.NOK_LogInTest')
-data.setCell(3, 3, 1425);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'NOK_LogInEmptyFields')
-data.setCell(4, 2, 'chapterNine.NOK_LogInTest')
-data.setCell(4, 3, 1336);
+data.setCell(0, 1, 'testUrlParam2')
+data.setCell(0, 2, 'API.GetExample')
+data.setCell(0, 3, 2518);
 window.suiteTableData['Default_Suite']= { tableData: data, tableDiv: 'times-div-Default_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 8 seconds</span>
+              <span class="suite-total-time">Total running time: 2 seconds</span>
               <div id="times-div-Default_Suite">
               </div> <!-- times-div-Default_Suite -->
             </div> <!-- times-div -->
@@ -272,9 +212,20 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">3 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">API.GetExample</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">checkValueInResponse</span>
+                <br/>
+                <span class="ignored-method-name">testUrlParam</span>
+                <br/>
+                <span class="ignored-method-name">getCurrentF1Results</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_Suite" class="panel">
@@ -283,67 +234,11 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">chapterNine.NOK_LogInTest</div> <!-- chronological-class-name -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
+              <div class="chronological-class-name">API.GetExample</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">testUrlParam2</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">NOK_LogInEmptyEmailAddress</span>
-                <span class="method-start">8200 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">9812 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">10725 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">NOK_LogInEmptyFields</span>
-                <span class="method-start">16814 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">18150 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">18957 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">NOK_LogInEmptyPassword</span>
-                <span class="method-start">25828 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">27253 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">28166 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">NOK_LogInWrongEmailAddress</span>
-                <span class="method-start">33423 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">35647 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">36510 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">NOK_LogInWrongPassword</span>
-                <span class="method-start">43222 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">44733 ms</span>
-              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
