--- a/test-output/old/Default Suite/methods-alphabetical.html
+++ b/test-output/old/Default Suite/methods-alphabetical.html
@@ -1,34 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fbaa64">  <td>17/07/27 18:27:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NOK_LogInTest.NOK_LogInEmptyEmailAddress()[pri:0, instance:chapterNine.NOK_LogInTest@49e4cb85]">NOK_LogInEmptyEmailAddress</td> 
-  <td>main@1627960023</td>   <td></td> </tr>
-<tr bgcolor="fbaa64">  <td>17/07/27 18:28:02</td>   <td>8614</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NOK_LogInTest.NOK_LogInEmptyFields()[pri:0, instance:chapterNine.NOK_LogInTest@49e4cb85]">NOK_LogInEmptyFields</td> 
-  <td>main@1627960023</td>   <td></td> </tr>
-<tr bgcolor="fbaa64">  <td>17/07/27 18:28:11</td>   <td>17628</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NOK_LogInTest.NOK_LogInEmptyPassword()[pri:0, instance:chapterNine.NOK_LogInTest@49e4cb85]">NOK_LogInEmptyPassword</td> 
-  <td>main@1627960023</td>   <td></td> </tr>
-<tr bgcolor="fbaa64">  <td>17/07/27 18:28:19</td>   <td>25223</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NOK_LogInTest.NOK_LogInWrongEmailAddress()[pri:0, instance:chapterNine.NOK_LogInTest@49e4cb85]">NOK_LogInWrongEmailAddress</td> 
-  <td>main@1627960023</td>   <td></td> </tr>
-<tr bgcolor="fbaa64">  <td>17/07/27 18:28:29</td>   <td>35022</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NOK_LogInTest.NOK_LogInWrongPassword()[pri:0, instance:chapterNine.NOK_LogInTest@49e4cb85]">NOK_LogInWrongPassword</td> 
-  <td>main@1627960023</td>   <td></td> </tr>
-<tr bgcolor="66c6b8">  <td>17/07/27 18:27:45</td>   <td>-8199</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SetUpTearDown.setUp()[pri:0, instance:chapterNine.NOK_LogInTest@49e4cb85]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1627960023</td>   <td></td> </tr>
-<tr bgcolor="66c6b8">  <td>17/07/27 18:27:56</td>   <td>2525</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SetUpTearDown.setUp()[pri:0, instance:chapterNine.NOK_LogInTest@49e4cb85]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1627960023</td>   <td></td> </tr>
-<tr bgcolor="66c6b8">  <td>17/07/27 18:28:04</td>   <td>10757</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SetUpTearDown.setUp()[pri:0, instance:chapterNine.NOK_LogInTest@49e4cb85]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1627960023</td>   <td></td> </tr>
-<tr bgcolor="66c6b8">  <td>17/07/27 18:28:13</td>   <td>19966</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SetUpTearDown.setUp()[pri:0, instance:chapterNine.NOK_LogInTest@49e4cb85]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1627960023</td>   <td></td> </tr>
-<tr bgcolor="66c6b8">  <td>17/07/27 18:28:22</td>   <td>28310</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SetUpTearDown.setUp()[pri:0, instance:chapterNine.NOK_LogInTest@49e4cb85]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1627960023</td>   <td></td> </tr>
-<tr bgcolor="66c6b8">  <td>17/07/27 18:27:55</td>   <td>1612</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetUpTearDown.tearDown()[pri:0, instance:chapterNine.NOK_LogInTest@49e4cb85]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1627960023</td>   <td></td> </tr>
-<tr bgcolor="66c6b8">  <td>17/07/27 18:28:03</td>   <td>9950</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetUpTearDown.tearDown()[pri:0, instance:chapterNine.NOK_LogInTest@49e4cb85]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1627960023</td>   <td></td> </tr>
-<tr bgcolor="66c6b8">  <td>17/07/27 18:28:13</td>   <td>19053</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetUpTearDown.tearDown()[pri:0, instance:chapterNine.NOK_LogInTest@49e4cb85]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1627960023</td>   <td></td> </tr>
-<tr bgcolor="66c6b8">  <td>17/07/27 18:28:21</td>   <td>27447</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetUpTearDown.tearDown()[pri:0, instance:chapterNine.NOK_LogInTest@49e4cb85]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1627960023</td>   <td></td> </tr>
-<tr bgcolor="66c6b8">  <td>17/07/27 18:28:30</td>   <td>36533</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetUpTearDown.tearDown()[pri:0, instance:chapterNine.NOK_LogInTest@49e4cb85]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1627960023</td>   <td></td> </tr>
+<tr bgcolor="d99988">  <td>17/07/28 11:31:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetExample.testUrlParam2()[pri:0, instance:API.GetExample@34ce8af7]">testUrlParam2</td> 
+  <td>main@940553268</td>   <td></td> </tr>
 </table>
